whenxuan: update the unit test for rml 2016

--- a/download_datasets.ipynb
+++ b/download_datasets.ipynb
@@ -2,54 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9552d551",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ps/anaconda3/envs/wwx_amc/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading to /home/ps/.cache/kagglehub/datasets/nolasthitnotomorrow/radioml2016-deepsigcom/1.archive...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 279M/279M [00:30<00:00, 9.46MB/s] "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting files...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Path to dataset files: /home/ps/.cache/kagglehub/datasets/nolasthitnotomorrow/radioml2016-deepsigcom/versions/1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import kagglehub\n",
     "\n",
@@ -61,46 +17,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "679c7050",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading to /home/ps/.cache/kagglehub/datasets/marwanabudeeb/rml201610b/1.archive...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1.49G/1.49G [02:31<00:00, 10.5MB/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting files...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Path to dataset files: /home/ps/.cache/kagglehub/datasets/marwanabudeeb/rml201610b/versions/1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import kagglehub\n",
     "\n",
@@ -112,46 +32,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "bd61beb0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading to /home/ps/.cache/kagglehub/datasets/pinxau1000/radioml2018/2.archive...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 18.0G/18.0G [30:49<00:00, 10.5MB/s]  "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting files...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Path to dataset files: /home/ps/.cache/kagglehub/datasets/pinxau1000/radioml2018/versions/2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import kagglehub\n",
     "\n",
@@ -163,26 +47,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "2610cb7b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
+    "import h5py\n",
     "\n",
-    "Xd = pickle.load(open(\"dataset/RML2016.10b.dat\", \"rb\"), encoding=\"iso-8859-1\")"
+    "f = h5py.File(\"dataset/2/GOLD_XYZ_OSC.0001_1024.hdf5\", \"r\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "54ff3caf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys([('QPSK', 2), ('PAM4', 8), ('AM-DSB', -4), ('GFSK', 6), ('QAM64', 8), ('PAM4', 18), ('QAM64', -6), ('QAM16', 2), ('QAM16', -20), ('8PSK', -18), ('PAM4', -6), ('WBFM', -18), ('BPSK', 8), ('CPFSK', 10), ('WBFM', 6), ('BPSK', 4), ('BPSK', -2), ('QPSK', -20), ('CPFSK', -8), ('QAM64', -20), ('QAM16', 12), ('GFSK', -20), ('CPFSK', 0), ('AM-DSB', 6), ('BPSK', -16), ('QPSK', -6), ('8PSK', -12), ('CPFSK', -18), ('AM-DSB', -18), ('QPSK', 8), ('PAM4', 14), ('WBFM', -8), ('AM-DSB', -10), ('GFSK', 12), ('QAM64', 2), ('8PSK', -10), ('QAM64', -4), ('GFSK', -4), ('AM-DSB', 8), ('PAM4', -16), ('QPSK', -16), ('BPSK', 16), ('WBFM', -14), ('CPFSK', 16), ('WBFM', 0), ('QPSK', 6), ('BPSK', 14), ('AM-DSB', -8), ('GFSK', -10), ('CPFSK', -2), ('QAM16', 8), ('QAM16', 6), ('QAM16', -16), ('QAM64', 18), ('CPFSK', 6), ('BPSK', 0), ('BPSK', -6), ('8PSK', -14), ('CPFSK', -12), ('WBFM', 10), ('BPSK', -20), ('PAM4', 4), ('GFSK', 10), ('QAM16', -6), ('QAM64', 4), ('PAM4', -20), ('8PSK', 10), ('QAM64', -10), ('GFSK', -6), ('AM-DSB', 2), ('PAM4', -10), ('QPSK', -2), ('8PSK', -8), ('8PSK', 0), ('QPSK', 12), ('8PSK', 12), ('AM-DSB', -14), ('GFSK', 0), ('QAM64', 14), ('QAM64', -8), ('QAM16', 0), ('GFSK', -16), ('WBFM', 2), ('PAM4', -4), ('QPSK', -12), ('WBFM', -20), ('CPFSK', 12), ('WBFM', 4), ('BPSK', 10), ('BPSK', -4), ('QPSK', -18), ('CPFSK', -6), ('BPSK', -12), ('8PSK', 16), ('QAM16', 10), ('QAM16', -12), ('WBFM', -6), ('8PSK', -20), ('CPFSK', 2), ('QPSK', 16), ('AM-DSB', 4), ('BPSK', -10), ('WBFM', -4), ('CPFSK', -16), ('WBFM', -16), ('QPSK', 10), ('PAM4', 0), ('AM-DSB', -12), ('GFSK', 14), ('QAM16', -2), ('QAM64', 0), ('WBFM', -10), ('QAM64', -14), ('GFSK', -2), ('AM-DSB', 14), ('PAM4', -14), ('QPSK', -14), ('8PSK', -4), ('CPFSK', 18), ('8PSK', 4), ('QPSK', 0), ('BPSK', 12), ('AM-DSB', -2), ('GFSK', 4), ('QAM64', 10), ('8PSK', 2), ('QAM16', -10), ('PAM4', 16), ('QAM16', 4), ('GFSK', 8), ('QAM16', -18), ('QAM64', 16), ('PAM4', -8), ('WBFM', 16), ('WBFM', 14), ('CPFSK', 8), ('BPSK', 6), ('BPSK', -8), ('CPFSK', -10), ('PAM4', 6), ('QAM64', -18), ('QAM16', 14), ('QAM16', -8), ('PAM4', -18), ('AM-DSB', 18), ('QAM64', -12), ('AM-DSB', 0), ('BPSK', -14), ('QPSK', -8), ('8PSK', -6), ('CPFSK', -20), ('GFSK', 16), ('WBFM', 8), ('QPSK', 14), ('PAM4', 12), ('AM-DSB', -16), ('GFSK', 2), ('BPSK', -18), ('QAM64', 12), ('QAM64', -2), ('8PSK', 14), ('GFSK', -14), ('BPSK', 18), ('PAM4', -2), ('QPSK', -10), ('CPFSK', 14), ('8PSK', 8), ('QPSK', 4), ('AM-DSB', 16), ('AM-DSB', -6), ('CPFSK', -4), ('WBFM', -2), ('8PSK', 18), ('GFSK', 18), ('QAM16', -14), ('AM-DSB', 10), ('WBFM', -12), ('CPFSK', 4), ('QPSK', 18), ('BPSK', 2), ('AM-DSB', -20), ('8PSK', -16), ('CPFSK', -14), ('WBFM', 18), ('PAM4', 2), ('QAM16', 18), ('QAM16', -4), ('QAM64', 6), ('GFSK', -18), ('PAM4', 10), ('QAM64', -16), ('QAM16', 16), ('GFSK', -8), ('AM-DSB', 12), ('PAM4', -12), ('QPSK', -4), ('8PSK', -2), ('GFSK', -12), ('8PSK', 6), ('WBFM', 12)])"
+       "<KeysViewHDF5 ['X', 'Y', 'Z']>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5d263412",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2555904, 1024, 2)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f[\"X\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "317a6d25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2555904, 24)"
       ]
      },
      "execution_count": 4,
@@ -191,12 +117,126 @@
     }
    ],
    "source": [
-    "Xd.keys()"
+    "f[\"Y\"].shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "b5d7339a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f[\"Y\"][780022]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "04073b31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bacd4b8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_1d = np.argmax(f[\"Y\"], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f6eb97e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([8, 8, 8, 8, 8])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_1d[890000:890005]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4d91c32c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2555904, 1)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f[\"Z\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "747a0582",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-20],\n",
+       "       [-20],\n",
+       "       [-20],\n",
+       "       [-20],\n",
+       "       [-20],\n",
+       "       [-20],\n",
+       "       [-20],\n",
+       "       [-20],\n",
+       "       [-20],\n",
+       "       [-20]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f[\"Z\"][:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ccc6b0a0",
    "metadata": {},
    "outputs": [],
@@ -206,38 +246,280 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "46a6492e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['8PSK',\n",
-       " 'AM-DSB',\n",
-       " 'BPSK',\n",
-       " 'CPFSK',\n",
-       " 'GFSK',\n",
-       " 'PAM4',\n",
-       " 'QAM16',\n",
-       " 'QAM64',\n",
-       " 'QPSK',\n",
-       " 'WBFM']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mods"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "f6c80fab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "数值-20的所有索引： [      0       1       2 ... 2453501 2453502 2453503]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 步骤1：定义要提取的单个目标值\n",
+    "target = -20\n",
+    "\n",
+    "# 步骤2：提取索引（关键：arr.flatten()将(2555904,1)展平为(2555904,)，避免维度问题）\n",
+    "idx_single = np.where(np.array(f[\"Z\"]).flatten() == target)[0]\n",
+    "\n",
+    "# 查看结果\n",
+    "print(f\"数值{target}的所有索引：\", idx_single)\n",
+    "# 测试小例子输出：数值-18的所有索引： [1 6]，与测试数组一致，正确！"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "3aa56427",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "102401"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2555904 - 2453503"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "16996924",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "98304"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(idx_single)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a45c083e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "98304"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4096 * 24"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "eff47bf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(\n",
+    "    [\n",
+    "        \"OOK\",\n",
+    "        \"4ASK\",\n",
+    "        \"8ASK\",\n",
+    "        \"BPSK\",\n",
+    "        \"QPSK\",\n",
+    "        \"8PSK\",\n",
+    "        \"16PSK\",\n",
+    "        \"32PSK\",\n",
+    "        \"16APSK\",\n",
+    "        \"32APSK\",\n",
+    "        \"64APSK\",\n",
+    "        \"128APSK\",\n",
+    "        \"16QAM\",\n",
+    "        \"32QAM\",\n",
+    "        \"64QAM\",\n",
+    "        \"128QAM\",\n",
+    "        \"256QAM\",\n",
+    "        \"AM-SSB-WC\",\n",
+    "        \"AM-SSB-SC\",\n",
+    "        \"AM-DSB-WC\",\n",
+    "        \"AM-DSB-SC\",\n",
+    "        \"FM\",\n",
+    "        \"GMSK\",\n",
+    "        \"OQPSK\",\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "19c45fc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'numpy' has no attribute 'count'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[30]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcount\u001b[49m(np.array([\u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m3\u001b[39m, \u001b[32m4\u001b[39m, \u001b[32m5\u001b[39m, \u001b[32m6\u001b[39m, \u001b[32m7\u001b[39m, \u001b[32m8\u001b[39m, \u001b[32m9\u001b[39m, \u001b[32m10\u001b[39m]))\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/wwx_amc/lib/python3.11/site-packages/numpy/__init__.py:333\u001b[39m, in \u001b[36m__getattr__\u001b[39m\u001b[34m(attr)\u001b[39m\n\u001b[32m    330\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mRemoved in NumPy 1.25.0\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    331\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mTester was removed in NumPy 1.25.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m333\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mmodule \u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[33m has no attribute \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    334\u001b[39m                      \u001b[33m\"\u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[33m\"\u001b[39m.format(\u001b[34m__name__\u001b[39m, attr))\n",
+      "\u001b[31mAttributeError\u001b[39m: module 'numpy' has no attribute 'count'"
+     ]
+    }
+   ],
+   "source": [
+    "np.count(np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "70b7490e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ps/anaconda3/envs/wwx_amc/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3701, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"/tmp/ipykernel_4141442/1211562009.py\", line None, in <module>\n",
+      "KeyboardInterrupt\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ps/anaconda3/envs/wwx_amc/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 2201, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/ps/anaconda3/envs/wwx_amc/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1193, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/ps/anaconda3/envs/wwx_amc/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1064, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/ps/anaconda3/envs/wwx_amc/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 872, in structured_traceback\n",
+      "    formatted_exceptions: list[list[str]] = self.format_exception_as_a_whole(\n",
+      "                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/ps/anaconda3/envs/wwx_amc/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 784, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(record))\n",
+      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/ps/anaconda3/envs/wwx_amc/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 540, in format_record\n",
+      "    assert isinstance(frame_info.lineno, int)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "AssertionError\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = []\n",
+    "\n",
+    "for i in f[\"Z\"]:\n",
+    "    if i not in l:\n",
+    "        l.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "48df40b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([-20]),\n",
+       " array([-18]),\n",
+       " array([-16]),\n",
+       " array([-14]),\n",
+       " array([-12]),\n",
+       " array([-10]),\n",
+       " array([-8]),\n",
+       " array([-6]),\n",
+       " array([-4]),\n",
+       " array([-2]),\n",
+       " array([0]),\n",
+       " array([2]),\n",
+       " array([4]),\n",
+       " array([6]),\n",
+       " array([8]),\n",
+       " array([10]),\n",
+       " array([12]),\n",
+       " array([14]),\n",
+       " array([16]),\n",
+       " array([18]),\n",
+       " array([20]),\n",
+       " array([22]),\n",
+       " array([24]),\n",
+       " array([26]),\n",
+       " array([28]),\n",
+       " array([30])]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8989296b",
    "metadata": {},
    "outputs": [],
    "source": []
